--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,17 @@
+ext.kotlin_version = '2.2.0'
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.4.2'
+        classpath 'com.google.gms:google-services:4.4.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.2.0"
+    }
+}
+
 allprojects {
     repositories {
         google()
