--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,27 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"math-game-0207","appId":"1:112656822738:android:f263fc22c2d52de418180b","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"math-game-0207","configurations":{"android":"1:112656822738:android:f263fc22c2d52de418180b","ios":"1:112656822738:ios:6d4a62f6834f34de18180b"}}}}}}
+{
+  "firestore": {
+    "database": "(default)",
+    "location": "asia-east1",
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    }
+  ],
+  "storage": {
+    "rules": "storage.rules"
+  }
+}
