--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,11 @@ dependencies:
   flame: ^1.17.0
   flame_audio: ^2.1.2
   firebase_core: ^4.0.0
-  firebase_auth: ^4.21.0
+  firebase_auth: 6.0.0
   cupertino_icons: ^1.0.8
   firebase_analytics: ^12.0.0
+  google_sign_in: ^6.0.0
+
 
 dev_dependencies:
   flutter_test:
